--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "poker-tools",
-  "version": "1.2.2",
+  "version": "1.3.0",
   "description": "A set of poker tools (equity calculating, checking winner of hand, etc).",
   "main": "./dist/index.js",
   "scripts": {
@@ -29,7 +29,8 @@
   },
   "homepage": "https://github.com/N1ghtly/poker-tools#readme",
   "dependencies": {
-    "lodash": "^4.17.5"
+    "lodash": "^4.17.5",
+    "lodash.combinations": "^18.9.19"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.44",
